--- a/Web/stylesHome.css
+++ b/Web/stylesHome.css
@@ -5,13 +5,13 @@ body {
 }
 
 .header {
-    width: 80%;
+    width: 90%;
     margin: 0 auto;
-
 }
 
 header {
     background: #FFFFFF
+    
 }
 
 header::after {
@@ -22,16 +22,30 @@ header::after {
 
 .logo {
     float: left;
-    width: 5%;
-    padding: 10px 0;
+    width: 83px;
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
 
 .headingLeft {
-    float: left;
+    font-family: "Inter", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 500;
+    font-style: normal;
+    font-size: 30px;
+    padding-top: 5px;
+    position: absolute;
+    left: 120px;
 }
 
 .headingRight {
     float: right;
+    font-family: "Inter", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 500;
+    font-style: normal;
+    font-size: 25px;
+    padding-top: 7px;
 }
 
 nav ul {
@@ -54,25 +68,50 @@ nav a {
 }
 
 .container2 {
- 
+    height: 799px;
+
 }
 
+
 .container2 h1 {
- color: #1C7138;
- padding-left: 40px;
- padding-top: 1.5cm;
+    color: #1C7138;
+    font-family: "Inter", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 600;
+    font-style: normal;
+    font-size: 60px;
+    width: 540px;
+    height: 170px;
+    padding-left: 55px;
+    padding-top: 226px;
 }
 
 .container2 p {
-    width: 150px;
-    padding-left: 60px;
-    padding-bottom: 1.5cm;
+    font-family: "Inter", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+    padding-left: 55px;
+    padding-bottom: 226px;
+    font-size: 30px;
 }
 
 .container3 { 
+    text-align: center;
     background: white;
+    height: 411px;
 }
 
+.container3 h1 {
+    justify-content: center;
+    font-family: "Inter", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 600;
+    font-style: normal;
+    font-size: 48px;
+    width: 281px;
+    height: 58px;
+}
 .container5 { 
     background: white;
 }
