--- a/Web/stylesHome.css
+++ b/Web/stylesHome.css
@@ -96,6 +96,7 @@ nav a {
     font-size: 30px;
 }
 
+
 .container3 { 
     text-align: center;
     background: white;
@@ -103,15 +104,42 @@ nav a {
 }
 
 .container3 h1 {
-    justify-content: center;
+    padding-top: 60px;;
     font-family: "Inter", sans-serif;
     font-optical-sizing: auto;
     font-weight: 600;
     font-style: normal;
     font-size: 48px;
-    width: 281px;
-    height: 58px;
 }
+
+.container3 p {
+    color:#F78480;
+    padding-top: 20px;
+    font-family: "Inter", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 600;
+    font-style: normal;
+    font-size: 30px;
+
+}
+
+.container4 {
+    height: 754px;
+    padding-right: 54px;
+    text-align: right;
+}
+
+.container4 h4 {
+    color: #1C7138;
+    font-family: "Inter", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 600;
+    font-style: normal;
+    font-size: 24px;
+    
+
+}
+
 .container5 { 
     background: white;
 }
