--- a/Web/stylesHome.css
+++ b/Web/stylesHome.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: 'Inter';
+    src: url(assets/Inter/Inter-VariableFont_opsz\,wght.ttf);
+}
+
 body {
     margin: 0;
     background:#F6F6F6
@@ -63,7 +68,6 @@ nav li {
 nav a {
     color: #488125;
     text-decoration: none;
-    font-family: Arial, Helvetica, sans-serif;
     font-weight: 600;
 }
 
