worked on the flower graphics in the team page with CSS, planning to add animations to it as well with CSS animations

--- a/stylesAbout.css
+++ b/stylesAbout.css
@@ -153,7 +153,147 @@ h1 {
 .container3 { 
     display: flex;
     flex-direction: column;
+    align-items: center;
     text-align: center;
     background: white;
-    height: 650px;
+    height: 850px;
+    overflow: hidden;
+}
+
+.flowers {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 200px; 
+    margin-left: 30px;
+}
+
+.mission {
+    position: relative;
+    width: 200px; 
+    height: 200px;
+    margin: 50px;
+    margin-top: 180px;
+}
+
+.petal {
+    position: absolute;
+    width: 180px;
+    height: 180px;
+    background-color: #F78480;
+    border: 3px solid #cf5e6b ;
+    z-index: 1;
+}
+
+.one .petal:nth-of-type(1) {
+    border-radius: 60% 60% 10% 60%; /* top left, right, bottom left, right */
+    transform: rotateZ(45deg) skew(5deg, 5deg) translate(-95px, -95px);
+}
+.one .petal:nth-of-type(2) {
+    border-radius: 60% 60% 60% 10%;
+    transform: rotateZ(28deg) skew(-5deg, -5deg) translate(95px, -95px);
+}
+.one .petal:nth-of-type(3) {
+    border-radius: 60% 10% 60% 60%;
+    transform: rotateZ(-8deg) skew(-5deg, -5deg) translate(-95px, 95px);
+}
+.one .petal:nth-of-type(4) {
+    border-radius: 10% 60% 60% 60%;
+    transform: rotateZ(10deg) skew(5deg, 5deg) translate(95px, 95px);
+}
+.one .petal:nth-of-type(5) {
+    border-radius: 60% 60% 10% 60%;
+    transform: rotateZ(333deg) skew(5deg, 5deg) translate(-95px, -95px);
+}
+
+
+
+.two .petal:nth-of-type(1) {
+    border-radius: 60% 60% 10% 60%; /* top left, right, bottom left, right */
+    transform: rotateZ(45deg) skew(5deg, 5deg) translate(-95px, -95px);
+}
+.two .petal:nth-of-type(2) {
+    border-radius: 60% 60% 60% 10%;
+    transform: rotateZ(28deg) skew(-5deg, -5deg) translate(95px, -95px);
+}
+.two .petal:nth-of-type(3) {
+    border-radius: 60% 10% 60% 60%;
+    transform: rotateZ(-8deg) skew(-5deg, -5deg) translate(-95px, 95px);
+}
+.two .petal:nth-of-type(4) {
+    border-radius: 10% 60% 60% 60%;
+    transform: rotateZ(10deg) skew(5deg, 5deg) translate(95px, 95px);
+}
+.two .petal:nth-of-type(5) {
+    border-radius: 60% 60% 10% 60%;
+    transform: rotateZ(333deg) skew(5deg, 5deg) translate(-95px, -95px);
+}
+
+
+
+.three .petal:nth-of-type(1) {
+    border-radius: 60% 60% 10% 60%; /* top left, right, bottom left, right */
+    transform: rotateZ(45deg) skew(5deg, 5deg) translate(-95px, -95px);
+}
+.three .petal:nth-of-type(2) {
+    border-radius: 60% 60% 60% 10%;
+    transform: rotateZ(28deg) skew(-5deg, -5deg) translate(95px, -95px);
+}
+.three .petal:nth-of-type(3) {
+    border-radius: 60% 10% 60% 60%;
+    transform: rotateZ(-8deg) skew(-5deg, -5deg) translate(-95px, 95px);
+}
+.three .petal:nth-of-type(4) {
+    border-radius: 10% 60% 60% 60%;
+    transform: rotateZ(10deg) skew(5deg, 5deg) translate(95px, 95px);
+}
+.three .petal:nth-of-type(5) {
+    border-radius: 60% 60% 10% 60%;
+    transform: rotateZ(333deg) skew(5deg, 5deg) translate(-95px, -95px);
+}
+
+.center {
+    position: absolute;
+    top: -5px;
+    right: -20px;
+    width: 260px;
+    height: 180px;
+    border: 3px solid #fbd154 ;
+    background: #F8E16F;
+    border-radius: 50%;
+    z-index: 1;
+}
+
+.stem {
+    position: absolute;
+    background-color: #95bb91;
+    border: 3px solid #5e8e58 ;
+    height: 300px;
+    width: 10px;
+    left: 82px;
+    top: 180px;
+}
+
+.leftleaf {
+    position: absolute;
+    background-color: #95bb91;
+    border: 3px solid #5e8e58 ;
+    height: 150px;
+    width: 150px;
+    border-radius: 0% 100% 0% 100%;
+    top: 330px;
+    right: 100px;
+    z-index: 1;
+}
+
+.rightleaf {
+    position: absolute;
+    background-color: #95bb91;
+    border: 3px solid #5e8e58 ;
+    height: 200px;
+    width: 130px;
+    border-radius: 100% 0% 100% 0%;
+    top: 280px;
+    left: 80px;
+    z-index: 1;
 }
