--- a/stylesHome.css
+++ b/stylesHome.css
@@ -92,6 +92,16 @@ nav a {
     align-items: center;
 }
 
+.container2 div h4 {
+    color: #184713;
+    font-family: "Inter", sans-serif;
+    font-size: 17px;
+    width: 540px;
+    padding-left: 70px;
+    padding-top: 226px;
+    margin: 0 0 10px 0;
+}
+
 .container2 div h1 {
     color: #1c5b31;
     font-family: "Inter", sans-serif;
@@ -100,8 +110,8 @@ nav a {
     font-style: normal;
     font-size: 60px;
     width: 540px;
+    margin: 0 0 40px 0;
     padding-left: 70px;
-    padding-top: 226px;
 }
 
 .container2 div p {
@@ -206,6 +216,7 @@ nav a {
     font-size: 1.5rem;
     color: #1c5b31;
     margin: 0;
+    margin-top: 15px;
   }
 
   .container5 {
@@ -219,7 +230,46 @@ nav a {
     height: 600px;
     border-radius: 50px;
     object-fit: cover;
-    background-color: white;
+  }
+
+  div .vector {
+    position: absolute;
+    width: 535px; 
+    height: 30px;
+    top: 1610px;
+    right: 70px;
+  }
+
+  div .vector2 {
+    position: absolute;
+    width: 430px; 
+    height: 15px;
+    top: 2510px;
+    left: 80px;
+  }
+
+  div .vector3 {
+    position: absolute;
+    width: 430px; 
+    height: 30px;
+    top: 3130px;
+    right: 70px;
+  }
+
+  div .vector4 {
+    position: absolute;
+    width: 480px; 
+    height: 20px;
+    top: 1080px;
+    left: 550px;
+  }
+
+  div .vector5 {
+    position: absolute;
+    width: 535px; 
+    height: 45px;
+    top: 490px;
+    left: 65px;
   }
 
   .section-button {
