--- a/stylesAbout.css
+++ b/stylesAbout.css
@@ -5,7 +5,7 @@ body {
 }
 
 .header {
-    width: 90%;
+    width: 95%;
     margin: 0 auto;
 }
 
@@ -34,7 +34,7 @@ header::after {
     font-size: 30px;
     padding-top: 5px;
     position: absolute;
-    left: 120px;
+    left: 70px;
 }
 
 .headingRight {
@@ -348,11 +348,22 @@ h1 {
 
 .container4 { 
     display: flex;
-    flex-direction: column;
+    justify-content: space-between;
     align-items: center;
-    text-align: center;
-    height: 650px;
-    overflow: hidden;
+    padding: 80px;
+}
+
+.container4 h1, .container5 h1, .container6 h1 {
+    font-size: 3rem;
+    margin: 0 0 20px 0;
+    color: black;
+}
+
+.advisor {
+    height: 450px;
+    width: 450px;
+    border-radius: 30px;
+    margin-left: 20px;
 }
 
 footer {
