--- a/stylesHome.css
+++ b/stylesHome.css
@@ -1,337 +1,360 @@
 body {
-    margin: 0;
-    background: #F8E16F;
+  margin: 0;
+  background: #93C4A6;
+  font-family: 'Open Sans', sans-serif;
+  overflow-x: hidden;
 }
 
 body, h1, h4, p, a {
-    font-family: 'Inter', sans-serif !important;
+  font-family: 'Open Sans', sans-serif;
 }
 
 .header {
-    width: 90%;
-    margin: 0 auto;
+  width: 85%;
+  margin: 0 auto;
 }
 
 header {
-    background: white;
+  background: #93C4A6;
 }
 
 header::after {
-    content: '';
-    display: table;
-    clear: both;
+  content: '';
+  display: table;
+  clear: both;
 }
 
 .logo {
-    float: left;
-    width: 83px;
-    padding-top: 10px;
-    padding-bottom: 10px;
+  float: left;
+  width: 83px;
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
 
 .headingLeft {
-    font-family: "Inter", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: 500;
-    font-style: normal;
-    font-size: 30px;
-    padding-top: 5px;
-    position: absolute;
-    left: 120px;
+  font-optical-sizing: auto;
+  font-weight: 500;
+  font-style: normal;
+  font-size: 25px;
+  padding-top: 10px;
+  position: absolute;
+  left: 150px;
 }
 
 .headingRight {
-    float: right;
-    font-family: "Inter", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: 500;
-    font-style: normal;
-    font-size: 20px;
-    padding-top: 3px;
-}
-
-a:hover {
-    color: #1d311b;
-}
-
-.headingRight .apply {
-    background-color: #F8E16F;
-    color: black;
-    padding: 20px;
-    transition: transform 0.2s ease;
-    border-radius: 35px;
-}
-
-.apply:hover {
-    box-shadow: 5px 5px 5px #395637;
+  float: right;
+  font-optical-sizing: auto;
+  font-weight: 500;
+  font-style: normal;
+  font-size: 25px;
+  padding-top: 10px;
 }
 
 nav ul {
-    margin: 0;
-    padding: 0;
-    list-style: none;
+  margin: 0;
+  padding: 0;
+  list-style: none;
 }
 
 nav li {
-    display: inline-block;
-    margin-left: 60px;
-    padding-top: 25px;
+  display: inline-block;
+  margin-left: 60px;
+  padding-top: 25px;
 }
 
 nav a {
-    color: #1c5b31;
-    text-decoration: none;
-    font-family: Arial, Helvetica, sans-serif;
-    font-weight: 600;
+  color: #ffffff;
+  text-decoration: none;
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 600;
 }
 
 .container2 {
-    height: 800px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  height: 650px;
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: flex-start;
+  align-items: center;
+  text-align: right;
+}
+
+.divider {
+  margin-bottom: 180px;
+  margin-right: 130px;
 }
 
 .container2 div h4 {
-    color: #184713;
-    font-family: "Inter", sans-serif;
-    font-size: 17px;
-    width: 540px;
-    padding-left: 70px;
-    padding-top: 226px;
-    margin: 0 0 10px 0;
+  color: #000000;
+  font-size: 30px;
+  width: 540px;
+  margin: 10px 0 10px 0;
 }
 
 .container2 div h1 {
-    color: #1c5b31;
-    font-family: "Inter", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: 600;
-    font-style: normal;
-    font-size: 60px;
-    width: 540px;
-    margin: 0 0 40px 0;
-    padding-left: 70px;
+  color: #ffffff;
+  font-style: normal;
+  font-weight: 550; 
+  font-size: 60px;
+  width: 540px;
+  margin: 0 0 20px 0;
+  line-height: 1;
+}
+
+.container2 span{
+  font-weight: 900; 
 }
 
 .container2 div p {
-    font-family: "Inter", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: 400;
-    font-style: normal;
-    padding-left: 70px;
-    padding-bottom: 226px;
-    font-size: 30px;
-    width: 540px;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 20px;
+  width: 540px;
+  margin: 10px 0 40px 0;
 }
 
 .container2 img {
-    margin-left: 50px;
-    height: 650px;
-    width: 800px; 
-    border-radius: 50px;
+  position: absolute;
+  height: 730px;
+  width: 980px; 
+  left: 0px;
+  top: 120px;
+}
+
+.container2 .left {
+  position: absolute;
+  height: 400px;
+  width: 250px; 
+  top: 450px;
+  left: 1350px;
+}
+
+.container2 .leftS {
+  position: absolute;
+  height: 350px;
+  width: 450px; 
+  top: 380px;
+  left: 1140px;
 }
 
 .container3 { 
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-    background: white;
-    height: 411px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  background: #F4F7EC;
+  height: 780px;
+
+  background-image: url('assets/leafDecor.png');
+  background-repeat: no-repeat; 
+  background-size: 100% auto;
+  background-position: center;
+}
+
+.container3 .divider {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin: 0;
 }
 
 .container3 h1 {
-    padding-top: 60px;
-    font-family: "Inter", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: 600;
-    font-style: normal;
-    font-size: 48px;
+  font-weight: 900;
+  font-style: normal;
+  font-size: 60px;
 }
 
 .container3 p {
-    padding-bottom: 60px;
-    color:#F78480;
-    font-family: "Inter", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: 600;
-    font-style: normal;
-    font-size: 30px;
-    width: 1150px;
+  color:#000000;
+  font-weight: 400;
+  font-size: 30px;
+  width: 850px;
 }
 
-.container4, .container5, .container6 {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 80px;
-    gap: 60px;
-  }
-  
-  .container4 {
-    flex-direction: row-reverse;
-    text-align: right;
-  }
-  
-  .container5 {
-    flex-direction: row;
-    text-align: left;
-    background: white;
-  }
-  
-  .container6 {
-    flex-direction: row-reverse;
-    text-align: right;
-    background: #F8E16F;
-  }
-  
-  .container4 > div, .container5 > div, .container6 > div {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    max-width: 600px;
-  }
-  
-  .container4 h1, .container5 h1, .container6 h1 {
-    font-size: 3rem;
-    margin: 0 0 20px 0;
-    color: black;
-  }
-  
-  .container4 h4, .container6 h4 {
-    font-size: 24px;
-    margin: 0 0 10px 0;
-    color: #1c5b31;
-  }
+.container3 p a{
+  font-weight: 600;
+  color: #93C4A6;
+}
 
-  .container5 {
-    font-size: 24px;
-    margin: 0 0 10px 0;
-    color:#F78480;
-  }
-  
-  .container4 p, .container6 p {
-    font-size: 1.5rem;
-    color: #1c5b31;
-    margin: 0;
-    margin-top: 15px;
-  }
 
-  .container5 {
-    font-size: 1.5rem;
-    color:#F78480;
-    margin: 0;
-  }
-  
-  .container4 img, .container5 img, .container6 img {
-    width: 600px;
-    height: 600px;
-    border-radius: 50px;
-    object-fit: cover;
-  }
+.container4, .container6 {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 80px;
+  gap: 60px;
+}
 
-  div .vector {
-    position: absolute;
-    width: 535px; 
-    height: 30px;
-    top: 1610px;
-    right: 70px;
-  }
+.container4 {
+  padding: 80px 0 80px 80px;
+  text-align: left;
+  max-height: 450px;
+}
 
-  div .vector2 {
-    position: absolute;
-    width: 430px; 
-    height: 15px;
-    top: 2510px;
-    left: 80px;
-  }
+.container4 > div {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  max-width: 700px;
+}
 
-  div .vector3 {
-    position: absolute;
-    width: 430px; 
-    height: 30px;
-    top: 3130px;
-    right: 70px;
-  }
+.container4 img {
+  width: 780px;
+  height: 610px;
+}
 
-  div .vector4 {
-    position: absolute;
-    width: 480px; 
-    height: 20px;
-    top: 1080px;
-    left: 550px;
-  }
+.container4 .scribble {
+  height: 700px;
+  position: absolute;
+  right: 0px;
+}
 
-  div .vector5 {
-    position: absolute;
-    width: 535px; 
-    height: 45px;
-    top: 490px;
-    left: 65px;
-  }
+.container5 {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  background: #F4F7EC;
+  height: 1000px;
+  font-size: 24px;
+  color:#568366;
 
-  .section-button {
-    display: inline-block;
-    background-color: white;
-    color: black;
-    font-weight: 600;
-    font-size: 1rem;
-    padding: 12px 24px;
-    border-radius: 30px;
-    text-decoration: none;
-    white-space: nowrap;     
-    width: fit-content; 
-    box-shadow: 2px 3px 5px rgba(0, 0, 0, 0.2);
-    transition: transform 0.2s ease, box-shadow 0.2s ease;
-  }
-  
-  .section-button:hover {
-    transform: scale(1.05);
-    box-shadow: 4px 5px 8px rgba(0, 0, 0, 0.25);
-  }
-  
-  .section-button.outline {
-    background-color: #F8E16F;
-    color: black;
-    border: 2px solid white;
-  }  
+  background-image: url('assets/circleBackdrop.png');
+  background-repeat: no-repeat; 
+  background-size: 100% auto;
+  background-position: center;
+}
 
-  .button-group {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: flex-end; 
-    gap: 16px;
-    margin-top: 30px;
-  }
+.container5 .divide {
+  max-width: 800px;
+}
 
-  footer {
-    background: white;
-    padding: 40px 20px;
-    text-align: center;
-  }
-  
-  .footer-icons {
-    display: flex;
-    justify-content: center;
-    gap: 25px;
-    margin-bottom: 15px;
-  }
-  
-  .footer-icons img {
-    width: 32px;
-    height: 32px;
-    transition: transform 0.2s ease;
-    cursor: pointer;
-  }
-  
-  .footer-icons img:hover {
-    transform: scale(1.1);
-  }
-  
-  .footer-text {
-    font-size: 1.2rem;
-    font-weight: 500;
-    color: black;
-  }
+.container5 h1 {
+  margin: 10px 0 10px 0;
+  font-size: 70px;
+  font-weight: 400;
+}
+
+.container5 p {
+  margin: 0 0 50px 0;
+  font-size: 25px;
+  color: #000000;
+}
+
+.images {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  gap: 20px;
+  margin: 0 0 20px 0;
+}
+
+.images img {
+  width: 250px;
+  height: 250px;
+  border-radius: 20px;
+}
+
+.container6 {
+  padding: 80px 80px 200px 10px;
+  flex-direction: row-reverse;
+  text-align: right;
+  background-color: #F4F7EC;
+  height:650px;
+}
+
+.container6 div{
+  max-width: 500px;
+}
+
+.container4 h1, .container6 h1 {
+  font-size: 3.8rem;
+  margin: 0 0 10px 0;
+  color: #ffffff;
+}
+
+.container4 p, .container6 p {
+  font-size: 1.5rem;
+  color: #000000;
+  margin: 0 0 20px 0;
+  margin-top: 15px;
+}
+
+.container6 img {
+  position: absolute;
+  width: 900px;
+  height: 750px;
+  left: 0px;
+  z-index: 1;
+}
+
+.container6 .blobs {
+  position: absolute;
+  width: 900px;
+  height: 750px;
+  left: 0px;
+}
+
+.section-button {
+  display: inline-block;
+  transform-origin: center;
+  background-color: #EBCAE8;
+  color: #ffffff;
+  font-weight: 600;
+  font-size: 1.3rem;
+  padding: 12px 35px;
+  border-radius: 30px;
+  text-decoration: none;
+  white-space: nowrap;     
+  width: fit-content; 
+  box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.5);
+  transition: transform 0.2s ease, box-shadow 0.2s ease;
+}
+
+.section-button:hover {
+  transform: scale(1.05);
+  box-shadow: 4px 5px 8px rgba(0, 0, 0, 0.25);
+}
+
+.section-button.outline {
+  background-color: #EBCAE8;
+  color: black;
+  border: 2px solid white;
+}  
+
+footer {
+  background: #F4F7EC;
+  text-align: center;
+  padding: 125px 80px 80px 80px;
+
+  background-image: url('assets/circles.png');
+  background-repeat: no-repeat; 
+  background-size: 100% auto;
+  background-position: center;
+}
+
+.footer-icons {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 25px;
+}
+
+.footer-icons img {
+  width: 32px;
+  height: 32px;
+  transition: transform 0.2s ease;
+  cursor: pointer;
+}
+
+.footer-icons img:hover {
+  transform: scale(1.1);
+}
+
+.footer-text {
+  font-size: 1.2rem;
+  font-weight: 500;
+  color: black;
+  margin: 10px 0 0 0;
+}
